Actualizando el contenido de la página

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Seguridad Yordan</title>
+  <title>SECURITYZAR</title>
   <style>
     /* Reset básico */
     * {
@@ -146,7 +146,7 @@
   <header>
     <div class="logo">
       <img src="tu-foto.jpg" alt="Foto del dueño" />
-      <h1>Seguridad Yordan</h1>
+      <h1>Seguridad Fisica</h1>
     </div>
     <nav>
       <a href="#servicios">Servicios</a>
@@ -190,8 +190,8 @@
     </section>
   </main>
   <footer id="contacto">
-    <p>© 2025 Seguridad Yordan. Todos los derechos reservados.</p>
-    <p>Contacto: yordan@email.com | Tel: +593 9 123 45678</p>
+    <p>© 2025 SECURITYZAR. Todos los derechos reservados.</p>
+    <p>Contacto: zarateyordan@outlook.com | Tel: +593 9 123 45678</p>
   </footer>
 </body>
 </html>
