Actualizando el contenido de la página

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
         </p>
       </div>
       <div class="hero-img">
-        <img src="seguridad.jpg" alt="Imagen de seguridad" />
+        <img src=""<img src="img/escolta-privado-guardaespaldas-almeria-1080x721-1.jpeg" height="1000" width="1500"/>
+             alt="Imagen de seguridad" />
       </div>
     </section>
     <section id="servicios" class="services">
