Actualizando el contenido de la página

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="tu-foto.jpg" alt="Foto del dueño" />
+      <img src="img/yordan.jpg" alt="Foto del dueño" height="477" width="612" />
       <h1>Seguridad Fisica</h1>
     </div>
     <nav>
