Actualizando el contenido de la página

--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
         </p>
       </div>
       <div class="hero-img">
-        <img src=""<img src="img/escolta-privado-guardaespaldas-almeria-1080x721-1.jpeg" height="300" width="450"/>
-             alt="Imagen de seguridad" />
+        <img src="img/escolta-privado-guardaespaldas-almeria-1080x721-1.jpeg" height="300" width="450" alt="Imagen de seguridad" />
       </div>
     </section>
     <section id="servicios" class="services">
