--- a/index.html
+++ b/index.html
@@ -2,196 +2,167 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>SECURITYZAR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ProtecZar - Seguridad Privada Profesional</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
-    /* Reset básico */
-    * {
-      box-sizing: border-box;
+    body {
+      background-color: #121212;
+      color: #eeeeee;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
     }
-    body {
-      font-family: 'Courier New', Courier, monospace;
-      background-color: #000000;
-      color: #00ffff;
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
     header {
-      background-color: #001122;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 0 10px #00ffff;
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      background: #1f1f1f;
+      padding: 40px 20px;
+      text-align: center;
+      border-bottom: 3px solid #007bff;
     }
-    header .logo {
-      display: flex;
-      align-items: center;
-      gap: 15px;
+    header h1 {
+      font-size: 3.5rem;
+      margin-bottom: 10px;
+      letter-spacing: 2px;
+      font-weight: 900;
     }
-    header .logo img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      border: 2px solid #00ffff;
-      object-fit: cover;
-      box-shadow: 0 0 10px #00ffff;
-    }
-    header .logo h1 {
-      font-size: 1.8rem;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
-    }
-    nav a {
-      color: #00ffff;
-      text-decoration: none;
-      margin-left: 25px;
-      font-weight: bold;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #0099cc;
-      text-shadow: 0 0 8px #0099cc;
+    header p {
+      font-size: 1.3rem;
+      color: #a0a0a0;
+      margin-top: 0;
     }
     main {
-      flex-grow: 1;
-      padding: 50px 30px;
-      max-width: 1100px;
-      margin: 0 auto;
+      max-width: 1200px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
-    .hero {
-      display: flex;
-      align-items: center;
-      gap: 40px;
-      margin-bottom: 60px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .hero-text {
-      flex: 1 1 400px;
-    }
-    .hero-text h2 {
-      font-size: 3.5rem;
-      margin-bottom: 20px;
-      text-shadow: 0 0 20px #00ffff;
-    }
-    .hero-text p {
-      font-size: 1.6rem;
-      color: #00bbff;
-      text-shadow: 0 0 8px #0077aa;
-      margin-bottom: 25px;
-    }
-    .hero-img {
-      flex: 1 1 300px;
-      max-width: 300px;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 25px #00ffff;
-      border: 3px solid #00ffff;
-    }
-    .hero-img img {
-      width: 100%;
-      height: auto;
-      display: block;
-      object-fit: cover;
+    .section-title {
+      font-size: 2.8rem;
+      border-bottom: 3px solid #007bff;
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+      font-weight: 700;
     }
     .services {
-      margin-top: 40px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
       gap: 30px;
+      margin-bottom: 60px;
     }
     .service-card {
-      background-color: #001122;
-      border: 2px solid #00ffff;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #00ffff;
+      background: #222222;
+      border-radius: 15px;
+      flex: 1 1 280px;
+      max-width: 320px;
+      padding: 30px 20px;
+      box-shadow: 0 0 15px #007bffaa;
       transition: transform 0.3s ease;
-      cursor: default;
+      text-align: center;
     }
     .service-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 30px #0099cc;
+      transform: translateY(-10px);
+      box-shadow: 0 0 30px #007bffdd;
     }
-    .service-card h3 {
+    .service-icon {
+      font-size: 4.5rem;
+      color: #007bff;
+      margin-bottom: 20px;
+    }
+    .service-title {
+      font-size: 1.8rem;
       margin-bottom: 15px;
-      font-size: 2rem;
-      color: #00ffff;
-      text-shadow: 0 0 12px #00ffff;
+      font-weight: 700;
     }
-    .service-card p {
-      font-size: 1.2rem;
-      color: #00bbff;
-      text-shadow: 0 0 8px #0077aa;
+    .service-desc {
+      font-size: 1.1rem;
+      color: #bbb;
+      line-height: 1.5;
+    }
+    .image-section {
+      text-align: center;
+      margin-bottom: 60px;
+    }
+    .image-section img {
+      width: 400px;
+      max-width: 90vw;
+      border-radius: 20px;
+      box-shadow: 0 0 30px #007bffaa;
     }
     footer {
-      background-color: #001122;
-      padding: 15px 30px;
+      background: #1f1f1f;
+      padding: 30px 20px;
       text-align: center;
-      color: #006677;
+      color: #777;
       font-size: 1rem;
-      box-shadow: inset 0 1px 5px #003344;
+    }
+    @media (max-width: 800px) {
+      .services {
+        flex-direction: column;
+        align-items: center;
+      }
+      .service-card {
+        max-width: 90vw;
+      }
+      header h1 {
+        font-size: 2.5rem;
+      }
+      .section-title {
+        font-size: 2rem;
+      }
+      .service-icon {
+        font-size: 3.5rem;
+      }
+      .image-section img {
+        width: 90vw;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="img/yordan.jpg" alt="Foto del dueño" height="477" width="612" />
-      <h1>Seguridad Fisica</h1>
+
+<header>
+  <h1>ProtecZar</h1>
+  <p>Seguridad Privada Profesional y Confianza Total</p>
+</header>
+
+<main>
+  <section class="image-section">
+    <!-- Usa aquí la imagen que me diste, agrandada -->
+    <img src="img/escolta-privado-guardaespaldas-almeria-1080x721-1.jpeg" height="1000"
+                            width="1500"/> alt="Equipo de seguridad ProtecZar" />
+  </section>
+
+  <section>
+    <h2 class="section-title">Nuestros Servicios</h2>
+    <div class="services">
+      <div class="service-card">
+        <i class="fas fa-shield-alt service-icon"></i>
+        <h3 class="service-title">Protección Física</h3>
+        <p class="service-desc">Guardias entrenados para proteger personas y bienes con tecnología avanzada.</p>
+      </div>
+      <div class="service-card">
+        <i class="fas fa-video service-icon"></i>
+        <h3 class="service-title">Monitoreo CCTV</h3>
+        <p class="service-desc">Sistema de cámaras con vigilancia 24/7 para máxima seguridad.</p>
+      </div>
+      <div class="service-card">
+        <i class="fas fa-walking service-icon"></i>
+        <h3 class="service-title">Rondas de Seguridad</h3>
+        <p class="service-desc">Patrullajes constantes y supervisados para prevenir cualquier amenaza.</p>
+      </div>
+      <div class="service-card">
+        <i class="fas fa-key service-icon"></i>
+        <h3 class="service-title">Control de Acceso</h3>
+        <p class="service-desc">Sistemas modernos para el control y registro de entradas y salidas.</p>
+      </div>
     </div>
-    <nav>
-      <a href="#servicios">Servicios</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
-  <main>
-    <section class="hero">
-      <div class="hero-text">
-        <h2>Protegiendo tu futuro con tecnología y confianza</h2>
-        <p>
-          Somos una empresa líder en soluciones de seguridad integrales, comprometidos
-          con la protección de tus bienes y tu tranquilidad.
-        </p>
-        <p>
-          Contamos con sistemas avanzados de vigilancia, seguridad física y monitoreo 24/7.
-          Tu seguridad es nuestra prioridad.
-        </p>
-      </div>
-      <div class="hero-img">
-        <img src="img/escolta-privado-guardaespaldas-almeria-1080x721-1.jpeg" height="300" width="450" alt="Imagen de seguridad" />
-      </div>
-    </section>
-    <section id="servicios" class="services">
-      <div class="service-card">
-        <h3>Vigilancia 24/7</h3>
-        <p>Monitoreo constante para asegurar la protección total de tus instalaciones.</p>
-      </div>
-      <div class="service-card">
-        <h3>Seguridad Física</h3>
-        <p>Guardias entrenados para prevenir y responder ante cualquier situación.</p>
-      </div>
-      <div class="service-card">
-        <h3>Instalación de Cámaras</h3>
-        <p>Equipos de última generación para una supervisión efectiva y confiable.</p>
-      </div>
-      <div class="service-card">
-        <h3>Consultoría en Seguridad</h3>
-        <p>Asesoría personalizada para diseñar el plan de seguridad que necesitas.</p>
-      </div>
-    </section>
-  </main>
-  <footer id="contacto">
-    <p>© 2025 SECURITYZAR. Todos los derechos reservados.</p>
-    <p>Contacto: zarateyordan@outlook.com | Tel: +593 9 123 45678</p>
-  </footer>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 ProtecZar Seguridad Privada. Todos los derechos reservados.</p>
+  <p>Contacto: +593 98 123 4567 | ZARATEYORDAN@OUTLOOK.COM</p>
+</footer>
+
 </body>
 </html>
