--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <footer>
   <p>© 2025 ProtecZar Seguridad Privada. Todos los derechos reservados.</p>
-  <p>Contacto: +593 98 123 4567 | ZARATEYORDAN@OUTLOOK.COM</p>
+  <p>Contacto: +593 98 123 4567 | ZARATEYORDAN.COM</p>
 </footer>
 
 </body>
